# gz_dartsim_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patches/: 0001-Fix-pkgconfig-installation-so-it-works-with-CMAKE_ST.patch
rpm/: ros-rolling-gz-dartsim-vendor.spec  template.spec
